# nvme-mi-dev

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
src/: lib.rs  nvme.rs  pcie.rs  wire.rs
src/nvme/: mi.rs
src/nvme/mi/: dev.rs
src/wire/: flags.rs  mod.rs  string.rs  uuid.rs  vec.rs
tests/: admin.rs  message.rs  nvme_mi.rs  pcie.rs
tests/common/: mod.rs
