[package]
name = "nvme-mi-dev"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
bitfield = "0.14.0"
crc = "3.2.1"
heapless = "0.8.0"
hmac = { version = "0.12.1", default-features = false }
log = "0.4.22"
mctp = { git = "http://github.com/CodeConstruct/mctp-rs", rev = "0ae21b3e52eccca5ebee8796a317be9806851416", package = "mctp", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
uuid = { version = "1.17.0", default-features = false }

[dev-dependencies]
smol = "2.0.2"
simplelog = "0.12.2"
