[package]
name = "nvme-mi-dev"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
crc = "3.2.1"
deku = { git = "https://github.com/sharksforarms/deku.git", rev = "e5363bc11e123bfcfd3467a2a90aeef8b588f432", default-features = false }
flagset = { version = "0.4.7", default-features = false }
heapless = "0.8.0"
hmac = { version = "0.12.1", default-features = false }
log = "0.4.22"
mctp = { version = "0.2.0", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
uuid = { version = "1.17.0", default-features = false }

[dev-dependencies]
smol = "2.0.2"
simplelog = "0.12.2"
